force-app/main/default/objects/Employee__c/fields/Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone__c</fullName>
    <formula>Company__r.Company_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Phone</label>
    <type>Text</type>
</CustomField>