force-app/main/default/objects/Employee__c/fields/Education_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Education_Percentage__c</fullName>
    <label>Education Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>