force-app/main/default/objects/Employee__c/fields/Employee_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Employee_Qualification__c</fullName>
    <label>Employee Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSC</fullName>
            </value>
            <value>
                <fullName>Inter</fullName>
            </value>
            <value>
                <fullName>Graduation</fullName>
            </value>
            <value>
                <fullName>Post-Graduation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>