force-app/main/default/objects/Employee__c/validationRules/Employee_Phone_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_Phone_Number_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT(ISBLANK(Employee_Phone_Number__c )),
     NOT(REGEX(Employee_Phone_Number__c , &quot;^[0-9]{10}$&quot;))
    )</errorConditionFormula>
    <errorMessage>Please Enter Valid 10 Digits Phone Number</errorMessage>
</ValidationRule>