force-app/main/default/objects/Employee__c/validationRules/Gender_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Gender_Validation_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( Gender__c , &apos;Male&apos;)   ||  Total_Salary__c  &gt;= 30000  )</errorConditionFormula>
    <errorMessage>Change the Gender</errorMessage>
</ValidationRule>